<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LifePalL</string>
    <string name="title_stats">Stats</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="completed_sessions">Completed Sessions</string>
    <string name="student">Student</string>
    <string name="majors">majors/minors</string>
    <string name="year">graduation year</string>
    <string name="age">age (opt.)</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="add">New Room</string>
    <string name="save">SAVE</string>
    <string name="quit">QUIT</string>
    <string name="storage">CONTEXT_SP</string>


    <string name="stats_nav">Stats</string>
    <string name="timerText">Timer</string>
    <string name="stopwatchText">Stopwatch</string>
    <string name="nameText">Name</string>
    <string name="enterTaskNameHint">Enter Task Name</string>
    <string name="enterDescriptionHint">Enter Description</string>
    <string name="descriptionText">Description:</string>
    <string name="task_nameText">Task Name:</string>
    <string name="create_eventText">Create Event</string>
    <string name="tagText">Tag:</string>
    <string name="completed_session">Completed Session</string>


    <string name="welcome_to">Welcome to</string>
    <string name="next">Next!</string>
    <string name="name_entry">Please Enter Your Name:</string>
    <string name="name_hint">Name</string>
    <string name="logo">Lifepal logo</string>
    <string name="paw_print_design">Paw prints for opening page design</string>
    <string name="get_started">Get Started!</string>
    <string name="pet_entry">What should we call your pet?</string>
    <string name="goal_entry">What’s your goal for using this app?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_hint">Goal</string>
    <string name="selected_image">Selected Image</string>
    <string name="paw_with_question_marks_for_loading_screen">Paw with question marks for loading screen.</string>
    <string name="pets_loading">The petpals are getting ready, one second!</string>
    <string name="back">Back!</string>
    <string name="name">Name!</string>
    <string name="press_deselct">Press the pet to choose another one!</string>
    <string name="pet_bar_holder">Pet bar holder</string>
    <string name="profile_name">John Doe</string>
    <string name="pet">Pet</string>
    <string name="tags">Tags</string>
    <string name="personal_information">Personal Information</string>
    <string name="current_happniess_points_10_pt">Current Happniess Points: 10 pt</string>
    <string name="pet_name_string">Jimmy</string>
    <string name="current_tags">Current Tags</string>
    <string name="current_goal">Current Goal</string>
    <string name="user_name">Name</string>
    <string name="current_session_points">Current Session Points</string>
    <string name="toast_holder">toast holder</string>
    <string name="login_loginxml">Login</string>
    <string name="sign_up_loginxml">Sign Up</string>
    <string name="log_out">Log out</string>


</resources>