<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EnterName">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_marginBottom="100dp" />

    <ImageView
        android:id="@+id/top_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws" />

    <ImageView
        android:id="@+id/bottom_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:src="@drawable/paws"
        android:contentDescription="@string/paw_print_design" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_pink"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="180dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-25dp"
        android:text="@string/name_entry" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/outlined_rounded_rect"
        android:hint="@string/name_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:paddingStart="16dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="-225dp"
        android:background="@drawable/rounded_rect"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/black"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="-225dp"
        android:background="@drawable/rounded_rect"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/black"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="16sp" />

</FrameLayout>