<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EnterName">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:layout_marginBottom="100dp" />

    <ImageView
        android:id="@+id/top_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws" />

    <ImageView
        android:id="@+id/bottom_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:src="@drawable/paws"
        android:contentDescription="@string/paw_print_design" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_pink"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="180dp"/>
    <ImageView
        android:id="@+id/loading_paw"
        android:contentDescription="@string/paw_with_question_marks_for_loading_screen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-170dp"
        android:src="@drawable/paw" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/pets_loading"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/primary_pink"
        android:textSize="35sp" />



</FrameLayout>