<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ChoosePet">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="125dp"
        android:scrollbars="horizontal"
        android:scrollbarThumbHorizontal="@color/primary_pink">

        <LinearLayout
            android:id="@+id/imageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <!-- Populate this with ImageViews dynamically -->
        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/selected_image"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginBottom="-80dp"
        android:visibility="gone"
         />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="-150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-230dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_pink"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deselection_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_pink"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="@string/press_deselct"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/next_button_choose"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_rect"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/black"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_rect"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/black"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/bottom_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws"
        />

    <ImageView
        android:id="@+id/bottom_paw_prints_cropped"
        android:layout_width="128dp"
        android:layout_height="165dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws_cropped"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/top_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws"
        android:layout_gravity="top|start" />

</FrameLayout>