<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted">

    <ImageView
        android:id="@+id/top_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:contentDescription="@string/paw_print_design"
        android:layout_gravity="top|start"
        android:src="@drawable/paws"/>

    <ImageView
        android:id="@+id/bottom_paw_prints"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/paw_print_design"
        android:src="@drawable/paws" />

    <!-- Username Input -->

    <!-- Password Input -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_pink"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="380dp"
        android:padding="16dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="460dp"
        android:padding="12dp"
        android:text="@string/login" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="530dp"
        android:padding="12dp"
        android:text="sign up" />

</FrameLayout>
