<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_image"
                android:contentDescription="@string/logo"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text=""
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/toolbar_image"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pt_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/toolbar_image">

                <ImageView
                    android:id="@+id/rect_pts"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/outlined_rounded_rect"
                    android:contentDescription="@string/pet_bar_holder" />

                <ImageView
                    android:id="@+id/pet_pts"
                    android:layout_width="38dp"
                    android:layout_height="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/selected_image"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/rect_pts"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.085"
                    app:layout_constraintStart_toStartOf="@+id/rect_pts"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />

                <TextView
                    android:id="@+id/pet_name_pts"
                    android:layout_width="106dp"
                    android:layout_height="37dp"
                    android:paddingStart="40dp"
                    android:text=""
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rect_pts"
                    app:layout_constraintEnd_toStartOf="@+id/pet_pts_pts"
                    app:layout_constraintStart_toEndOf="@+id/pet_pts"
                    app:layout_constraintTop_toTopOf="@+id/rect_pts"
                    app:layout_constraintVertical_bias="0.483" />

                <TextView
                    android:id="@+id/pet_pts_pts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="10dp"
                    android:text=""
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rect_pts"
                    app:layout_constraintEnd_toEndOf="@+id/rect_pts"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.516" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
        app:itemBackground="@color/primary_pink"
        app:itemIconTint="@color/dark_gray"
        app:itemTextColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>